grammar
program ::= term* EOF

term ::= word | statement

word ::= number
       | operation
       | defined-word
       | variable-name

operation ::= arithmetic-operation
            | stack-operation
            | logical-operation
            | io-operation
            | memory-operation

arithmetic-operation ::= "+" | "-" | "*" | "/"

stack-operation ::= "dup" | "drop" | "swap"

logical-operation ::= "=" | "!=" | ">" | ">=" | "<" | "<="

io-operation ::= "." | "emit" | ","

memory-operation ::= "!" | "@"

statement ::= if-statement
            | loop-statement
            | definition-statement
            | declaration-statement

if-statement ::= "if" block "then"
               | "if" block "else" block "then"

loop-statement ::= "begin" block "until"

block ::= word*

definition-statement ::= ":" defined-word block ";"

declaration-statement ::= "var" variable-name
